[gd_scene load_steps=24 format=2]

[ext_resource path="res://Interface/Pause.gd" type="Script" id=1]
[ext_resource path="res://Logic/MazeGenerator.gd" type="Script" id=2]
[ext_resource path="res://World/images/GrassBackground.png" type="Texture" id=3]
[ext_resource path="res://Interface/paused.png" type="Texture" id=4]
[ext_resource path="res://Interface/gameover.png" type="Texture" id=5]
[ext_resource path="res://Interface/restart_button.png" type="Texture" id=6]
[ext_resource path="res://Interface/restart_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://TextureButton.gd" type="Script" id=8]
[ext_resource path="res://PeaberryBase.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://GameOver.gd" type="Script" id=10]
[ext_resource path="res://Sound/gameover.wav" type="AudioStream" id=11]
[ext_resource path="res://tnt_img.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[node name="World" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( -88, -64 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 1400 )

[node name="MazeGenerator" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="MazeGenerator"]
light_mask = -2147483647
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="YSort" type="YSort" parent="MazeGenerator"]

[node name="Pause" type="Control" parent="MazeGenerator"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="MazeGenerator/Pause"]
anchor_right = 34.4
anchor_bottom = 18.4
margin_bottom = -6.10352e-05
color = Color( 0, 0, 0, 0.364706 )

[node name="TextureRect" type="TextureRect" parent="MazeGenerator/Pause"]
material = SubResource( 1 )
margin_left = 500.0
margin_top = 200.0
margin_right = 580.0
margin_bottom = 225.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="MazeGenerator/Pause"]
margin_left = 528.0
margin_top = 306.0
margin_right = 912.0
margin_bottom = 402.0

[node name="menu_button" type="Button" parent="MazeGenerator/Pause/VBoxContainer"]
material = SubResource( 5 )
margin_right = 384.0
margin_bottom = 26.0
custom_colors/font_color = Color( 100, 100, 100, 1 )
custom_colors/font_color_hover = Color( 100, 100, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Menu"
flat = true
align = 0

[node name="quit_button" type="Button" parent="MazeGenerator/Pause/VBoxContainer"]
material = SubResource( 6 )
margin_top = 30.0
margin_right = 384.0
margin_bottom = 56.0
custom_colors/font_color = Color( 100, 100, 100, 1 )
custom_colors/font_color_hover = Color( 100, 100, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true
align = 0

[node name="GameOver" type="Control" parent="MazeGenerator"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="BlackOverlay" type="ColorRect" parent="MazeGenerator/GameOver"]
margin_right = 1376.0
margin_bottom = 736.0
color = Color( 0, 0, 0, 0.364706 )

[node name="TextureRect" type="TextureRect" parent="MazeGenerator/GameOver"]
material = SubResource( 2 )
margin_left = 455.0
margin_top = 200.0
margin_right = 555.0
margin_bottom = 240.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Restart" type="TextureButton" parent="MazeGenerator/GameOver"]
material = SubResource( 3 )
margin_left = 1221.0
margin_top = 654.0
margin_right = 1261.0
margin_bottom = 694.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="MazeGenerator/GameOver"]
margin_left = 468.0
margin_top = 306.0
margin_right = 804.0
margin_bottom = 369.0

[node name="restart_button" type="Button" parent="MazeGenerator/GameOver/VBoxContainer"]
material = SubResource( 7 )
margin_right = 336.0
margin_bottom = 26.0
custom_colors/font_color = Color( 100, 100, 100, 1 )
custom_colors/font_color_hover = Color( 100, 100, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Restart"
flat = true
align = 0

[node name="menu_button" type="Button" parent="MazeGenerator/GameOver/VBoxContainer"]
material = SubResource( 8 )
margin_top = 30.0
margin_right = 336.0
margin_bottom = 56.0
custom_colors/font_color = Color( 100, 100, 100, 1 )
custom_colors/font_color_hover = Color( 100, 100, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Menu"
flat = true
align = 0

[node name="quit_button" type="Button" parent="MazeGenerator/GameOver/VBoxContainer"]
material = SubResource( 9 )
margin_top = 60.0
margin_right = 336.0
margin_bottom = 86.0
custom_colors/font_color = Color( 100, 100, 100, 1 )
custom_colors/font_color_hover = Color( 100, 100, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true
align = 0

[node name="gameover_fx" type="AudioStreamPlayer" parent="MazeGenerator"]
stream = ExtResource( 11 )

[node name="HUD" type="Control" parent="."]
visible = false
material = SubResource( 10 )
margin_left = 1150.0
margin_top = 639.0
margin_right = 1304.0
margin_bottom = 735.0

[node name="BlackOverlay" type="ColorRect" parent="HUD"]
margin_left = 105.0
margin_top = 65.0
margin_right = 164.0
margin_bottom = 98.0
color = Color( 0, 0, 0, 0.631373 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
material = SubResource( 11 )
margin_left = 94.0
margin_top = 57.0
margin_right = 144.0
margin_bottom = 107.0
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="HUD"]
margin_left = 130.0
margin_top = 75.0
margin_right = 156.0
margin_bottom = 89.0

[connection signal="pressed" from="MazeGenerator/Pause/VBoxContainer/menu_button" to="MazeGenerator/Pause" method="_on_menu_button_pressed"]
[connection signal="pressed" from="MazeGenerator/Pause/VBoxContainer/quit_button" to="MazeGenerator/Pause" method="_on_quit_button_pressed"]
[connection signal="pressed" from="MazeGenerator/GameOver/Restart" to="MazeGenerator/GameOver/Restart" method="_on_Restart_pressed"]
[connection signal="pressed" from="MazeGenerator/GameOver/VBoxContainer/restart_button" to="MazeGenerator/GameOver" method="_on_restart_button_pressed"]
[connection signal="pressed" from="MazeGenerator/GameOver/VBoxContainer/menu_button" to="MazeGenerator/GameOver" method="_on_menu_button_pressed"]
[connection signal="pressed" from="MazeGenerator/GameOver/VBoxContainer/quit_button" to="MazeGenerator/GameOver" method="_on_quit_button_pressed"]
